[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/TestFont.tres" type="DynamicFont" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuHolder" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuHolder"]
margin_left = 389.0
margin_top = 412.0
margin_right = 864.0
margin_bottom = 585.0
custom_fonts/font = ExtResource( 2 )
text = "Start (Y)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MenuHolder/StartButton" to="." method="_on_StartButton_pressed"]
